Removed text-align for header content box from LESS and added it as an inline style to help resolve PIRATE-3660.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -91,13 +91,6 @@ header.bk-header {
 	@media @tablet {
 		padding: 0 0 60px;
 	}
-
-	.textwidget {
-		text-align: right;
-		@media @tablet {
-			text-align: center;
-		}
-	}
 }
 
 
